<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#F8F7FC">

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="822dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:padding="30dp"
            android:layout_marginTop="50dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/communnect_logo_green" />

        <TextView
            android:id="@+id/maintextLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/communect"
            android:textColor="#06AFA8"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/mainSlogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="#68E192"

            android:textSize="15sp" />

        <Button
            android:id="@+id/mainBtnGoogle"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/gradient_btn"
            android:drawableStart="@drawable/ic_google"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/signup_google"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mainBtnEmail"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_btn"
            android:drawableStart="@drawable/ic_envelope"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/signup_email"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/alrHaveAnAcc"
            android:textColor="#C4C4C4" />

        <TextView
            android:id="@+id/mainBtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/signin_here"
            android:textColor="#35A7F9" />

        <TextView
            android:id="@+id/textAgreements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/terms"
            android:textColor="#C4C4C4"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>