<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient_ellipse_page">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="164dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/communnect_logo_light_ds" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/createAcc"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="367dp"
        android:layout_height="606dp"
        android:background="@drawable/white_rectangle_ds"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905">

        <TextView
            android:id="@+id/textFname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/fname"
            android:textColor="#2C2C2C" />

        <EditText
            android:id="@+id/editTextFname"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="text"
            android:padding="10sp"
            android:text=""
            android:textColor="#222423"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textLname"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/lname"
            android:textColor="#2C2C2C" />

        <EditText
            android:id="@+id/editTextLname"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="text"
            android:padding="10sp"
            android:text=""
            android:textColor="#222423"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/email"
            android:textColor="#2C2C2C" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="#222423"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/pass"
            android:textColor="#2C2C2C" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="#222423"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textConfirmPassword"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/confirm_pass"
            android:textColor="#2C2C2C" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_textfield"
            android:ems="10"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="#222423"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/cbShowHidePassword"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5sp"
            android:buttonTint="@color/greenText"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/showPass" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="310dp"
            android:layout_height="41dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gradient_btn"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>